# proxycast

./: AGENTS.md  IMPLEMENTATION_PLAN.md  RELEASE_NOTES.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/aiprompts/: README.md  playwright-e2e.md
docs/plugins/: antigravity-provider.md  claude-provider.md  codex-provider.md  droid-provider.md  gemini-provider.md  kiro-provider.md
docs/prd/: credential-provider-plugin-architecture.md
plugins/machine-id-tool/: config.json  plugin.json
scripts/: social-workbench-e2e-smoke.mjs  start-web-bridge-dev.mjs
src/: App.tsx  RootRouter.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.headless.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/mcp/: Cargo.toml
src-tauri/crates/mcp/src/: client.rs  lib.rs  manager.rs  tool_converter.rs  types.rs
src-tauri/crates/skills/: Cargo.toml
src-tauri/crates/skills/src/: lib.rs  llm_provider.rs  skill_loader.rs
src-tauri/src/: crash_reporting.rs  dev_bridge.rs  lib.rs  server.rs  server_utils.rs
src-tauri/tests/: api_key_provider_tests.rs  end_to_end_tests.rs
src/components/: AppSidebar.tsx  Dashboard.tsx  Sidebar.tsx
src/hooks/: index.ts  useApiKeyProvider.ts  useConfiguredProviders.ts  useGlobalMediaGenerationDefaults.ts  useModelRegistry.ts  useOAuthPlugins.ts  useProjects.ts  useProviderPool.ts  useTauri.ts  useWorkspace.ts
src/i18n/: I18nPatchProvider.tsx  dom-replacer.ts
src/lib/: README.md  activeContentTarget.ts  canvasImageInsertBus.ts  crashDiagnostic.ts  (+13 more)
(+638 files in other folders)
