[package]
name = "proxycast-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
dirs.workspace = true
